# ycd-presto-wix-integration

./: .gitignore  main.py  mkdocs.yml  pyproject.toml  schemas.py  service.py
app/: main.py  service.py
app/schemas/: __init__.py  presto_output.py  wix_input.py
cert/: pubic_key.txt
docs/: explanation.md
schemas/: presto_output.py  wix_input.py
